--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,11 @@
 html,body {
     height: 100%;
 }
+img {
+    padding-top: 10%;
+    border-radius: 50%;
+    float:right;
+}
 body {
     font-family: 'Poppins',sans-serif;
     font-weight: 400;
